# semantic-grep

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  embeddings.rs  lib.rs  main.rs  matcher.rs  printer.rs  search.rs
tests/: integration.rs
