[package]
name = "semanticgrep"
version = "0.1.0"
edition = "2021"
description = "A semantic-aware grep tool with Model2Vec embeddings"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
model2vec-rs = "0.2.1"
rayon = "1"
regex = "1"
serde_json = "1"
ignore = "0.4"
globset = "0.4"
log = "0.4"
env_logger = "0.11"
termcolor = "1.4"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
